Validation system, fixed layout slightly
- Basic validation system checks that the sequence given in terms of a list can be parsed,
that the OEIS code given exists in sloane_functions.py, and that the parameters of for a
given built-in sequence makes sense. For example you can't ignore the coefficient list
when choosing a linear recurrence, and you can't give some text as a mod parameter. Right
now the feedback is given via a small output panel on the right. I'm hoping this is temporary
until someone has a better idea of how to display the errors.

- The layout looks much better on chrome now, but the canvas still overflows slightly
below and to the right.

--- a/website/css/toolPage.css
+++ b/website/css/toolPage.css
@@ -59,6 +59,48 @@ header button:hover:not(.active) {
   color: #000000;
 }
 
+#logArea {
+  right: 0%;
+  top: 3.35em;
+  margin: 0;
+  padding: 0;
+  list-style-type: none;
+  background-color: var(--sideNavColor);
+  box-shadow: 10px 10px grey;
+  width: 40em;
+  height: 80%;
+  position: fixed;
+  overflow:scroll;
+  scrollbar-width: none;
+}
+
+#innerLogArea{
+  padding-left: 2px;
+  margin-top: 20px;
+  display: inline-block;
+  background: var(--sideNavColor);
+  height: 90%;
+  width: 80%;
+
+}
+
+#innerLogArea p {
+  color: red;
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 1em;
+  font-weight: 800;
+  float: left;
+  margin-bottom: auto;
+  text-align: justify;
+}
+
+
+
+::-webkit-scrollbar {
+  width: 0px;
+  background: transparent; /* make scrollbar transparent */
+}
+
 #Upload {
   padding-left: 1em;
   padding-right: 1em;
@@ -81,7 +123,7 @@ header button:hover:not(.active) {
 
 /*Main Side Navagation Bar*/
 .sideNav {
-  top: 53.833px;
+  top: 3.35em;
   margin: 0;
   padding: 0;
   list-style-type: none;
@@ -421,7 +463,7 @@ textarea { */
   width: 0;
   position: fixed;
   top: 3.365em;
-  left: 48em;
+  left: 44em;
   z-index: 3;
   background-color: var(--topBarColor);
   overflow-x: hidden;
